Render `JSON`, `HTML` and `CSV` version of the API

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,3 +3,4 @@ line-length = 121
 target-version = ["py38", "py39", "py310", "py311", "py312", "py313"]
 [tool.djlint]
 max_blank_lines = 1
+ignore = "H030,H031"
